--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,19 @@
  */
 /* 1 Typography
 ----------------------------------------------------------------------------- */
+.customername{
+	font-family: cursive;
+    text-transform: uppercase;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+.logo-title{
+	font-size: 2.0em;
+    font-family: fantasy;
+    text-transform: uppercase;
+    margin-top: 3px;
+}
+
 html {
 	height: 100%;
 }
@@ -370,7 +383,8 @@ tbody {
 }
 
 .header-top {
-	background-color: #f1f1f1;
+	height:50px;
+	background-color: #000000e0;
 	border-bottom: 1px solid #dadada;
 	-webkit-box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.03) inset;
 	box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.03) inset;
@@ -5381,7 +5395,7 @@ a.overlay.small i {
 
 .box-style-1 {
 	text-align: center;
-	padding: 20px;
+	/*padding: 20px;*/
 	margin: 20px 0;
 }
 
